Got Shift+space to put in a required space. This involved removing handling of all spaces with a modifier key from msiEditor.cpp, adding entries into editorkeys.inc, fixing CSS entries, and other changes. There may be other changes coming, but testing can begin now.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -142,6 +142,7 @@ button[class="msi"][minpasses]:after {
 hspace, mspace{
 /*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#hspace"); */
   display: inline-block;
+  white-space: pre;
 }
 
 hspace *, mspace * {
